--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,19 +1,23 @@
 textarea {
-    height: 200px;
-    width: 800px;
-}
-
-div {
-    display: inline-block;
-    margin: 5px;
-    padding: 5px;
-    background-color: whitesmoke;
-}
-
-button {
+    resize: none;
     width: 100%;
+    height: 150px;
 }
 
 video {
-    width: 100%;
+    background-color: black;
+    max-width: 100%;
+}
+
+.container {
+    margin-top: 10px;
+    background-color: whitesmoke;
+    border: 1px solid lightgray;
+}
+
+.row {
+    margin: 5px;
+    padding: 5px;
+    background-color: lightgray;
+    border: 1px solid gray;
 }
